--- a/src/app/modules/problems/pages/user-statistics/widgets/widget-facts/widget-facts.component.html
+++ b/src/app/modules/problems/pages/user-statistics/widgets/widget-facts/widget-facts.component.html
@@ -4,74 +4,68 @@
       {{ 'Facts' | translate }}
     </div>
   </div>
-  <div class="card-body d-flex flex-column gap-3" *ngIf="facts">
-    <ng-container *ngFor="let factItem of factItems">
-      <ng-container *ngIf="facts[factItem.key] as fact">
-        <div class="d-flex align-items-center gap-3 p-3 rounded-3 bg-body-tertiary">
-          <div
-            class="rounded-circle d-flex align-items-center justify-content-center flex-shrink-0"
-            [ngClass]="factItem.icon.classes"
-            style="width: 40px; height: 40px;"
-          >
-            <i
-              *ngIf="factItem.icon.type === 'feather'"
-              class="fs-5"
-              [attr.data-feather]="factItem.icon.name | iconName"
-            ></i>
-            <kep-icon
-              *ngIf="factItem.icon.type === 'kep'"
-              class="fs-5"
-              [name]="factItem.icon.name"
-            ></kep-icon>
-          </div>
-          <div class="flex-grow-1 d-flex flex-column gap-1">
-            <div class="text-uppercase text-secondary fw-semibold small">
+  <div class="card-body" *ngIf="facts">
+    <ul class="list-group">
+      <ng-container *ngFor="let factItem of factItems">
+        <ng-container *ngIf="facts[factItem.key] as fact">
+          <li class="list-group-item">
+            <div class="fw-semibold">
+              <i
+                *ngIf="factItem.icon.type === 'feather'"
+                class="fs-5"
+                [attr.data-feather]="factItem.icon.name | iconName"
+              ></i>
+              <kep-icon
+                *ngIf="factItem.icon.type === 'kep'"
+                class="fs-5"
+                [name]="factItem.icon.name"
+              ></kep-icon>
               {{ factItem.translationKey | translate }}
             </div>
-            <ng-container [ngSwitch]="factItem.type">
-              <ng-container *ngSwitchCase="'singleAttempt'">
-                <div class="fw-bold" [ngbTooltip]="facts.solvedWithSingleAttemptPercentage + '%'">
-                  {{ fact }}
-                </div>
+
+            <div>
+              <ng-container [ngSwitch]="factItem.type">
+                <ng-container *ngSwitchCase="'singleAttempt'">
+                  <div class="fw-bold" [ngbTooltip]="facts.solvedWithSingleAttemptPercentage + '%'">
+                    {{ fact }}
+                  </div>
+                </ng-container>
+                <ng-container *ngSwitchCase="'attempt'">
+                  <a
+                    [routerLink]="Resources.Problem | resourceById: fact.problemId"
+                    [ngbTooltip]="attemptTooltip"
+                  >
+                    {{ fact.problemId }}. {{ fact.problemTitle }}
+                  </a>
+                  <ng-template #attemptTooltip>
+                    <div class="mb-1">{{ fact.datetime | localizedDate:'medium' }}</div>
+                    <div [innerHTML]="fact | attemptVerdictHTML"></div>
+                  </ng-template>
+                </ng-container>
+                <ng-container *ngSwitchCase="'accepted'">
+                  <a
+                    [routerLink]="Resources.Problem | resourceById: fact.problemId"
+                    [ngbTooltip]="acceptedTooltip"
+                  >
+                    {{ fact.problemId }}. {{ fact.problemTitle }}
+                  </a>
+                  <ng-template #acceptedTooltip>
+                    {{ fact.datetime | localizedDate:'medium' }}
+                  </ng-template>
+                </ng-container>
+                <ng-container *ngSwitchCase="'attemptCount'">
+                  <a
+                    [routerLink]="Resources.Problem | resourceById: fact.problemId"
+                    [ngbTooltip]="fact.attemptsCount"
+                  >
+                    {{ fact.problemId }}. {{ fact.problemTitle }}
+                  </a>
+                </ng-container>
               </ng-container>
-              <ng-container *ngSwitchCase="'attempt'">
-                <a
-                  [routerLink]="Resources.Problem | resourceById: fact.problemId"
-                  class="link-primary"
-                  [ngbTooltip]="attemptTooltip"
-                >
-                  {{ fact.problemId }}. {{ fact.problemTitle }}
-                </a>
-                <ng-template #attemptTooltip>
-                  <div class="mb-1">{{ fact.datetime | localizedDate:'medium' }}</div>
-                  <div [innerHTML]="fact | attemptVerdictHTML"></div>
-                </ng-template>
-              </ng-container>
-              <ng-container *ngSwitchCase="'accepted'">
-                <a
-                  [routerLink]="Resources.Problem | resourceById: fact.problemId"
-                  class="link-primary"
-                  [ngbTooltip]="acceptedTooltip"
-                >
-                  {{ fact.problemId }}. {{ fact.problemTitle }}
-                </a>
-                <ng-template #acceptedTooltip>
-                  {{ fact.datetime | localizedDate:'medium' }}
-                </ng-template>
-              </ng-container>
-              <ng-container *ngSwitchCase="'attemptCount'">
-                <a
-                  [routerLink]="Resources.Problem | resourceById: fact.problemId"
-                  class="link-primary"
-                  [ngbTooltip]="fact.attemptsCount"
-                >
-                  {{ fact.problemId }}. {{ fact.problemTitle }}
-                </a>
-              </ng-container>
-            </ng-container>
-          </div>
-        </div>
+            </div>
+          </li>
+        </ng-container>
       </ng-container>
-    </ng-container>
+    </ul>
   </div>
 </kep-card>
