--- a/src/app/modules/contests/pages/contest/contest-statistics/components/contest-statistics-first-solves/contest-statistics-first-solves.component.html
+++ b/src/app/modules/contests/pages/contest/contest-statistics/components/contest-statistics-first-solves/contest-statistics-first-solves.component.html
@@ -19,9 +19,9 @@
             <tr>
               <td class="fw-semibold py-2">{{ entry.problem }}</td>
               <td class="py-2">
-                <contestant-view [user]="entry.record.contestant?.user" [team]="entry.record.contestant?.team"></contestant-view>
+                <contestant-view [user]="entry.record?.contestant?.user" [team]="entry.record?.contestant?.team"></contestant-view>
               </td>
-              <td class="text-end text-nowrap py-2">{{ entry.record.time }}</td>
+              <td class="text-end text-nowrap py-2">{{ entry.record?.time }}</td>
             </tr>
           }
         } @else {
