--- a/src/app/modules/contests/pages/contests/sections/section-header/section-header.component.html
+++ b/src/app/modules/contests/pages/contests/sections/section-header/section-header.component.html
@@ -6,7 +6,7 @@
         {{ 'Rating' | translate }}
       </span>
     </a>
-    <a routerLink="statistics" class="btn btn-primary-light" [ngClass.lt-md]="'btn-sm'">
+    <a routerLink="user-statistics" class="btn btn-primary-light" [ngClass.lt-md]="'btn-sm'">
       <kep-icon name="statistics" class="font-medium-1"></kep-icon>
       <span [ngClass.lt-md]="'d-none'">
         {{ 'Statistics' | translate }}
