Fix performance spelling across UI

--- a/src/app/modules/arena/components/arena-player-statistics/arena-player-statistics.component.html
+++ b/src/app/modules/arena/components/arena-player-statistics/arena-player-statistics.component.html
@@ -1,9 +1,9 @@
 <challenges-user-view [user]="statistics"></challenges-user-view>
 
-<div ngbTooltip="{{ 'Perfomance' | translate }}" class="mt-2 text-dark">
+<div ngbTooltip="{{ 'Performance' | translate }}" class="mt-2 text-dark">
   <i data-feather="activity" class="font-medium-3"></i>
   <span class="font-medium-4">
-    {{ statistics.perfomance }}
+    {{ statistics.performance }}
   </span>
 </div>
 
