--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings-table/contest-standings-table.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings-table/contest-standings-table.component.html
@@ -12,7 +12,7 @@
         <th ngbTooltip="{{ 'RatingChange' | translate }}" container="body" class="text-center">
           <i [data-feather]="'delta' | iconName"></i>
         </th>
-        <th class="text-center">{{ 'Contests.Perfomance' | translate }}</th>
+        <th class="text-center">{{ 'Contests.Performance' | translate }}</th>
       }
 
       @for (contestProblem of contestProblems; track contestProblem) {
@@ -68,14 +68,14 @@
           </td>
           <td class="text-center" style="white-space: nowrap;">
             <contests-rating-image
-              [title]="contestant.perfomanceTitle"
+              [title]="contestant.performanceTitle"
               [class]="'me-1'"/>
             <span class="text-dark me-1">
-              @if (contestant.perfomance >= 3400) {
+              @if (contestant.performance >= 3400) {
                 <span>∞</span>
               }
-              @if (contestant.perfomance < 3400) {
-                <span>{{ contestant.perfomance }}</span>
+              @if (contestant.performance < 3400) {
+                <span>{{ contestant.performance }}</span>
               }
             </span>
           </td>
@@ -109,7 +109,7 @@
         <th class="text-center">
           <i [data-feather]="'delta' | iconName"></i>
         </th>
-        <th class="text-center">{{ 'Contests.Perfomance' | translate }}</th>
+        <th class="text-center">{{ 'Contests.Performance' | translate }}</th>
       }
       @for (contestProblem of contestProblems; track contestProblem) {
         <th class="text-dark text-center">
