remove section faq

--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -6,7 +6,7 @@
 <section-statistics></section-statistics>
 <section-reviews></section-reviews>
 <section-get-started></section-get-started>
-<section-faq></section-faq>
+<!--<section-faq></section-faq>-->
 <section-contact-us></section-contact-us>
 
 <!--<section-footer></section-footer>-->
